--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 # ensure this file is tracked
 !.gitignore
 
-# don't track unpublished builds or stage
-output/web
-output/stage
+# don't track unpublished builds or stage (note: Runestone uses `published`)
+output/
+published/
 
 # don't track assets generated from source
 generated-assets
@@ -95,6 +95,10 @@ GitHub.sublime-settings
 
 # Don't track codechat config (will be generated automatically)
 codechat_config.yaml
+
+# Don't track deprecated workflows
+.github/workflows/deploy.yml
+.github/workflows/test-build.yml
 
 # Don't track local files under /venv (virtual local environment)
 venv
