--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,21 +1,19 @@
 {
   "name": "PreTeXt-Codespaces",
-
   // This Docker image includes some LaTeX support, but is still not to large.  Note that if you keep your codespace running, it will use up your GitHub free storage quota.  Additional options are listed below.
   // "image": "oscarlevin/pretext:small",
   // If you need to generate more complicated assets (such as sageplots) or use additional fonts when building to PDF, comment out the above line and uncomment the following line.
-  "image": "oscarlevin/pretext:full",
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
   // If you only intend to build for web and don't have any latex-image generated assets, you can use a smaller image:
   // "image": "oscarlevin/pretext:lite",
-
   // Add gh cli as a feature (to support codechat)
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {}
   },
-
   // Respect the project's designated dependencies
   "postCreateCommand": "pip install -r requirements.txt",
-
   // Port forwarding
   // ---------------
   // This is needed by the CodeChat Server.
@@ -46,11 +44,12 @@
       // This port needs to be public; however, there's no way to specify port visibility here. See `server.py` in the CodeChat Server for details.
     }
   },
-
   // Configure tool-specific properties.
   "customizations": {
     "codespaces": {
-      "openFiles": ["source/manuscript.ptx"]
+      "openFiles": [
+        "source/manuscript.ptx"
+      ]
     },
     "vscode": {
       "settings": {
@@ -68,7 +67,6 @@
       ]
     }
   }
-
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
 }
