Undo removal of "--force"

--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -119,4 +119,4 @@ jobs:
           git commit -m "Update PDF document" || echo "No changes to commit"
 
       - name: Force push to release branch
-        run: git push origin release 
+        run: git push origin release --force
