--- a/.gitignore
+++ b/.gitignore
@@ -118,12 +118,12 @@ venv
 *.dvi
 *.xdv
 *-converted-to.*
-# these rules might exclude image files for figures etc.
+# These rules might exclude image files for figures, etc.
 # *.ps
 # *.eps
 # *.pdf
 
-## Generated if empty string is given at "Please type another file name for output:"
+## Generated if an empty string is given at "Please type another file name for output:."
 .pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
@@ -404,7 +404,7 @@ TSWLatexianTemp*
 *.xwm
 
 # REVTeX puts footnotes in the bibliography by default, unless the nofootinbib
-# option is specified. Footnotes are the stored in a file with suffix Notes.bib.
+# option is specified. Footnotes are stored in a file with the suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
 
