--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ Package Control.user-ca-bundle
 oscrypto-ca-bundle.crt
 bh_unicode_properties.cache
 
-# Sublime-github package stores a github token in this file
+# Sublime-GitHub package stores a GitHub token in this file
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
 
@@ -251,7 +251,7 @@ acs-*.bib
 
 # knitr
 *-concordance.tex
-# TODO Uncomment the next line if you use knitr and want to ignore its generated tikz files
+# TODO: Uncomment the next line if you use knitr and want to ignore its generated TikZ files
 # *.tikz
 *-tikzDictionary
 
